tests/errors/unprovable-cons.expect
---STDERR---
error: Cannot prove constraint L+1 > G+1
   ┌─ ./primitives/core.fil:10:5
   │
10 │     @[G+1, L] out: 32
   │     ^^^^^^^^^ Interval's end time must be greater than the start time
   │
   ┌─ tests/errors/unprovable-cons.fil:11:3
   │
11 │   l0 := L<G, L+1>(left);
   │   ---------------------- Invoke's intervals must be well-formed

